--- a/torrent_client/rebar.config
+++ b/torrent_client/rebar.config
@@ -1,6 +1,8 @@
 
 
+{erl_opts, [fail_on_warning, debug_info]}.
+
 {deps, [
-%    {nat_upnp, ".*", {git, "git://github.com/benoitc/nat_upnp", {branch, "master"}}},
-    {gproc, ".*", {git, "git://github.com/uwiger/gproc", {branch, "master"}}}
+  {plain_fsm, ".*", {git, "git://github.com/uwiger/plain_fsm", {branch, "master"}}},
+  {gproc,     ".*", {git, "git://github.com/uwiger/gproc",     {branch, "master"}}}
 ]}.
