--- a/wiki/part1/js/package.json
+++ b/wiki/part1/js/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "dependencies": {
     "express": "~3.4.8",
-    "whiskers": "~0.3.3"
+    "whiskers": "~0.3.3",
+    "marked": "~0.3.1"
   },
   "devDependencies": {},
   "scripts": {
