--- a/wiki/part2/js/package.json
+++ b/wiki/part2/js/package.json
@@ -7,7 +7,8 @@
     "express": "~3.4.8",
     "whiskers": "~0.3.3",
     "marked": "~0.3.1",
-    "request": "~2.33.0"
+    "request": "~2.33.0",
+    "dateformat": "~1.0.7-1.2.3"
   },
   "devDependencies": {},
   "scripts": {
