added preview to part1 and part2

--- a/wiki/part1/js/package.json
+++ b/wiki/part1/js/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "node --debug server.js"
   },
   "author": "Laurie MacDougall Sookraj",
   "license": "ISC"
