refactored out db access and config from server.js in part2

--- a/wiki/part2/js/package.json
+++ b/wiki/part2/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wiki_part2",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Part Two Source Code for Wiki in 500 Lines or Less",
   "main": "server.js",
   "dependencies": {
@@ -15,6 +15,5 @@
     "start": "node server.js",
     "test": "node --debug server.js"
   },
-  "author": "Laurie MacDougall Sookraj",
-  "license": "ISC"
+  "author": "Laurie MacDougall Sookraj"
 }
