added fancy diff

--- a/wiki/part3/js/package.json
+++ b/wiki/part3/js/package.json
@@ -10,7 +10,8 @@
     "request": "~2.33.0",
     "dateformat": "~1.0.7-1.2.3",
     "passport": "~0.2.0",
-    "passport-local": "~0.1.6"
+    "passport-local": "~0.1.6",
+    "diff": "^1.0.8"
   },
   "devDependencies": {},
   "scripts": {
