--- a/wiki/simple_wiki/js/package.json
+++ b/wiki/simple_wiki/js/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "wiki_part2",
+  "name": "simple_wiki",
   "version": "1.0.0",
-  "description": "Part Two Source Code for Wiki in 500 Lines or Less",
+  "description": "Source Code for Simple Wiki in 500 Lines or Less",
   "main": "server.js",
   "dependencies": {
     "express": "~3.4.8",
     "whiskers": "~0.3.3",
-    "marked": "~0.3.1",
-    "request": "~2.33.0",
-    "dateformat": "~1.0.7-1.2.3"
+    "marked": "~0.3.1"
   },
   "devDependencies": {},
   "scripts": {
