more revisions from tech review around error handling and refactoring; moved config into a seperate folder, cleanup

--- a/wiki/package.json
+++ b/wiki/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "node js/server.js",
-    "test": "node --debug js/server.js"
+    "test": "jshint js/*; node --debug js/server.js"
   },
   "author": "Laurie MacDougall Sookraj"
 }
