Explain why small changes rebuild everything

--- a/contingent/Makefile
+++ b/contingent/Makefile
@@ -1,3 +1,5 @@
 
-diagram1.png: diagram1.dot
+all: diagram1.png diagram2.png
+
+diagram1.png diagram2.png: diagram%.png: diagram%.dot
 	dot -Tpng $< > $@
