Revised wiki to use jQuery and AJAX calls for content instead of loading each page through a static route.  Overall, I find this way a bit nicer, but in total I now have over 800 lines instead of under 500.  Also the split between which things are on different routes (view/edit/list) vs which things are AJAXy (login, get content, save) feels sometimes a bit arbitrary, I want to take another look at the whole thing and how it's structured and if there's a better place to make that split.  And then trim down the code to < 500 lines, possibly by removing one of the couch store or file store, or possibly by putting more code on the client side or server side to simplify things, or possibly by cutting some features.  I'll keep it on a separate branch for now because it feels a bit less put together than what's on the master with everything server side, I'll merge it back in once I get it back down < 500 lines.

--- a/wiki/package.json
+++ b/wiki/package.json
@@ -12,12 +12,13 @@
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
     "diff": "^1.0.8",
-    "password-hash": "^1.2.1"
+    "password-hash": "^1.2.1",
+    "jquery": "^2.1.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node js/server.js",
-    "test": "jshint js/*; node --debug js/server.js"
+    "start": "node app/server.js",
+    "test": "jshint app/*.js app/config/*.js app/public/js/wiki.js; node --debug app/server.js"
   },
   "author": "Laurie MacDougall Sookraj"
 }
