removed some of the AJAX calls, removed the file store and extra config, started cutting things down to fit

--- a/wiki/package.json
+++ b/wiki/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {},
   "scripts": {
     "start": "node app/server.js",
-    "test": "jshint app/*.js app/config/*.js app/public/js/wiki.js; node --debug app/server.js"
+    "test": "jshint app/*.js app/public/js/wiki.js; node --debug app/server.js"
   },
   "author": "Laurie MacDougall Sookraj"
 }
