* More destructuring parameter bindings

--- a/spreadsheet/Makefile
+++ b/spreadsheet/Makefile
@@ -11,7 +11,7 @@ test :: dist
 	@node extra/test.js
 
 wc :: dist
-	@wc -l *.js *.html *css
+	@grep -v '//' *.js *.html *css | wc -l
 
 clean ::
 	-@rm -rf dist/*
