minor: removed unused dependencies from package.json

--- a/wiki/package.json
+++ b/wiki/package.json
@@ -11,9 +11,7 @@
     "dateformat": "~1.0.7-1.2.3",
     "passport": "~0.2.0",
     "passport-local": "~0.1.6",
-    "diff": "^1.0.8",
-    "password-hash": "^1.2.1",
-    "jquery": "^2.1.0"
+    "diff": "^1.0.8"
   },
   "devDependencies": {
     "jshint": "^2.5.1",
