move compiler.py into bytecompiler.md (single source of truth)

--- a/bytecode-compiler/Makefile
+++ b/bytecode-compiler/Makefile
@@ -1,2 +1,2 @@
-main.py non-main: extractcode.py bytecompiler.md
+compiler.py non-compiler: extractcode.py bytecompiler.md
 	python extractcode.py <bytecompiler.md
