--- a/spreadsheet/package.json
+++ b/spreadsheet/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "main": "index.js",
   "description": "Web Spreadsheet in 99 lines",
-  "keywords": [ "web", "spreadsheet" ],
+  "keywords": [
+    "web",
+    "spreadsheet"
+  ],
   "author": {
     "name": "Audrey Tang",
     "email": "audreyt@audreyt.org",
@@ -23,8 +26,16 @@
     "url": "http://github.com/audreyt/500lines.git"
   },
   "dependencies": {
-    "static-here": "*",
     "mocha": "*",
+    "react": "^0.12.1",
+    "static-here": "*",
     "traceur": "0.0.66"
+  },
+  "devDependencies": {
+    "livescript-loader": "^0.1.2",
+    "react-hot-loader": "^0.5.0",
+    "webpack": "^1.4.13",
+    "webpack-dev-server": "^1.6.6",
+    "worker-loader": "^0.5.7"
   }
 }
