Improve graph diagrams with colors, ranks, shapes

--- a/contingent/Makefile
+++ b/contingent/Makefile
@@ -5,7 +5,7 @@ PNGS=$(addsuffix .png, $(basename $(DOTS)))
 all: .up-to-date~ $(PNGS)
 # diagram-example.png
 
-.up-to-date~: chapter.rst
+.up-to-date~: chapter.rst contingent/graphlib.py
 	python3 -m doctest -o ELLIPSIS -f chapter.rst
 	touch .up-to-date~
 
