Per Debo: move graphviz routine out of Graph class

--- a/contingent/Makefile
+++ b/contingent/Makefile
@@ -1,11 +1,12 @@
 
 DOTS=$(wildcard *.dot)
 PNGS=$(addsuffix .png, $(basename $(DOTS)))
+PYS=$(wildcard contingent/*.py)
 
 all: .up-to-date~ $(PNGS)
 # diagram-example.png
 
-.up-to-date~: chapter.rst contingent/graphlib.py
+.up-to-date~: chapter.rst $(PYS)
 	python3 -m doctest -o ELLIPSIS -f chapter.rst
 	touch .up-to-date~
 
