Make chapter.html a default "make" target

--- a/contingent/Makefile
+++ b/contingent/Makefile
@@ -3,16 +3,12 @@ DOTS=$(wildcard *.dot)
 PNGS=$(addsuffix .png, $(basename $(DOTS)))
 PYS=$(wildcard contingent/*.py)
 
-all: .up-to-date~ $(PNGS)
+all: chapter.html $(PNGS)
 # diagram-example.png
 
-.up-to-date~: chapter.rst $(PYS)
+chapter.html: chapter.rst $(PYS)
 	python3 -m doctest -o ELLIPSIS -f chapter.rst
-	touch .up-to-date~
+	rst2html chapter.rst chapter.html
 
 $(PNGS): %.png: %.dot
 	dot -Tpng $< > $@
-
-html: chapter.html
-chapter.html: chapter.rst
-	rst2html chapter.rst chapter.html
