Switch to rst2html.py, from "pip install"
Calling plain "rst2html" without the ".py" calls whatever crazy-old
version of the library is sitting in /usr/bin under Ubuntu.

--- a/contingent/Makefile
+++ b/contingent/Makefile
@@ -8,7 +8,7 @@ all: chapter.html $(PNGS)
 
 chapter.html: chapter.rst $(PYS)
 	python3 -m doctest -o ELLIPSIS -f chapter.rst
-	rst2html chapter.rst chapter.html
+	rst2html.py chapter.rst chapter.html
 
 $(PNGS): %.png: %.dot
 	dot -Tpng $< > $@
