--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
+*.aux
+*.pyc
+*.swp
+*1
+*~
 .DS_Store
 .c9
-*~
-_site
-*.pyc
 .coverage
+.python-version
+_site
 htmlcov
+output
+tex/*.tex.1
+tex/posa.bbl
+tex/posa.blg
+tex/posa.log
+tex/posa.out
+tex/posa.toc
+tex/template-engine.markdown
