Add colophon, frontmatter, intro from posa.
- We might try to build some of these from markdown from `minutiae`
  later, but perhaps not

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,7 @@ tex/500L.blg
 tex/500L.log
 tex/500L.out
 tex/500L.toc
+tex/frontmatter.tex
+tex/colophon.tex
+tex/intro.tex
 tex/template-engine.markdown
