--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ tex/500L.log
 tex/500L.out
 tex/500L.toc
 tex/frontmatter.tex
+tex/frontmatter-images
 tex/colophon.tex
 tex/intro.tex
 tex/template-engine.markdown
