--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ tex/modeller.markdown
 tex/modeller-images
 tex/ci.markdown
 tex/ci-images
+tex/objmodel.markdown
+tex/objmodel-images
 html/content
 html/cache
 *.pid
