Done images -- need to check line widths.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ tex/template-engine.markdown
 tex/crawler.markdown
 tex/crawler-images
 tex/sample.markdown
+tex/spreadsheet.markdown
+tex/spreadsheet-images
 tex/sample-images
 tex/modeller.markdown
 tex/modeller-images
