--- a/.gitignore
+++ b/.gitignore
@@ -17,27 +17,29 @@ tex/500L.blg
 tex/500L.log
 tex/500L.out
 tex/500L.toc
-tex/frontmatter.tex
-tex/frontmatter-images
-tex/colophon.tex
-tex/intro.tex
-tex/template-engine.markdown
-tex/crawler.markdown
-tex/crawler-images
-tex/sample.markdown
-tex/spreadsheet.markdown
-tex/spreadsheet-images
-tex/sample-images
-tex/modeller.markdown
-tex/modeller-images
-tex/ci.markdown
 tex/ci-images
-tex/objmodel.markdown
-tex/objmodel-images
-tex/data-store.markdown
-tex/data-store-images
-tex/cluster.markdown
+tex/ci.markdown
 tex/cluster-images
+tex/cluster.markdown
+tex/colophon.tex
+tex/crawler-images
+tex/crawler.markdown
+tex/data-store-images
+tex/data-store.markdown
+tex/frontmatter-images
+tex/frontmatter.tex
+tex/intro.tex
+tex/modeller-images
+tex/modeller.markdown
+tex/objmodel-images
+tex/objmodel.markdown
+tex/sample-images
+tex/sample.markdown
+tex/sampler-images
+tex/sampler.markdown
+tex/spreadsheet-images
+tex/spreadsheet.markdown
+tex/template-engine.markdown
 html/content
 html/cache
 *.pid
