--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ tex/spreadsheet-images
 tex/spreadsheet.markdown
 tex/static-analysis.markdown
 tex/template-engine.markdown
+tex/web-server-images
+tex/web-server.markdown
 html/content
 html/cache
 *.pid
