Add images. Small fixes.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ tex/frontmatter.tex
 tex/functionalDB-images
 tex/functionalDB.markdown
 tex/intro.tex
+tex/interpreter-images
+tex/interpreter.markdown
 tex/modeller-images
 tex/modeller.markdown
 tex/objmodel-images
