--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ tex/500L.blg
 tex/500L.log
 tex/500L.out
 tex/500L.toc
+tex/blockcode-images
+tex/blockcode.markdown
 tex/ci-images
 tex/ci.markdown
 tex/cluster-images
