Typeset Alloy chapter.

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ tex/sample-images
 tex/sample.markdown
 tex/sampler-images
 tex/sampler.markdown
+tex/same-origin-policy-images
+tex/same-origin-policy.markdown
 tex/spreadsheet-images
 tex/spreadsheet.markdown
 tex/static-analysis.markdown
