Initial typeset pass

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ tex/ci-images
 tex/ci.markdown
 tex/cluster-images
 tex/cluster.markdown
+tex/contingent-images
+tex/contingent.markdown
 tex/colophon.tex
 tex/crawler-images
 tex/crawler.markdown
