--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ tex/contingent.markdown
 tex/colophon.tex
 tex/crawler-images
 tex/crawler.markdown
+tex/dagoba.markdown
 tex/data-store-images
 tex/data-store.markdown
 tex/flow-shop-images
