Typeset image filters chapter.

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ tex/frontmatter-images
 tex/frontmatter.tex
 tex/functionalDB-images
 tex/functionalDB.markdown
+tex/image-filters-images
+tex/image-filters.markdown
 tex/intro.tex
 tex/interpreter-images
 tex/interpreter.markdown
