--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ tex/crawler.markdown
 tex/dagoba.markdown
 tex/data-store-images
 tex/data-store.markdown
+tex/event-web-framework.markdown
 tex/flow-shop-images
 tex/flow-shop.markdown
 tex/frontmatter-images
