We don't need .tex sources anymore.

--- a/.gitignore
+++ b/.gitignore
@@ -17,52 +17,32 @@ tex/500L.blg
 tex/500L.log
 tex/500L.out
 tex/500L.toc
-tex/blockcode-images
-tex/blockcode.markdown
-tex/ci-images
-tex/ci.markdown
-tex/cluster-images
-tex/cluster.markdown
-tex/contingent-images
-tex/contingent.markdown
+tex/500L.tex
+tex/blockcode*
+tex/ci*
+tex/cluster*
+tex/contingent*
 tex/colophon.tex
-tex/crawler-images
-tex/crawler.markdown
-tex/dagoba.markdown
-tex/data-store-images
-tex/data-store.markdown
-tex/event-web-framework.markdown
-tex/flow-shop-images
-tex/flow-shop.markdown
-tex/frontmatter-images
-tex/frontmatter.tex
-tex/functionalDB-images
-tex/functionalDB.markdown
-tex/image-filters-images
-tex/image-filters.markdown
+tex/crawler*
+tex/dagoba*
+tex/data-store*
+tex/event-web-framework*
+tex/flow-shop*
+tex/frontmatter*
+tex/functionalDB*
+tex/image-filters*
 tex/intro.tex
-tex/interpreter-images
-tex/interpreter.markdown
-tex/modeller-images
-tex/modeller.markdown
-tex/objmodel-images
-tex/objmodel.markdown
-tex/ocr-images
-tex/ocr.markdown
-tex/pedometer-images
-tex/pedometer.markdown
-tex/sample-images
-tex/sample.markdown
-tex/sampler-images
-tex/sampler.markdown
-tex/same-origin-policy-images
-tex/same-origin-policy.markdown
-tex/spreadsheet-images
-tex/spreadsheet.markdown
-tex/static-analysis.markdown
-tex/template-engine.markdown
-tex/web-server-images
-tex/web-server.markdown
+tex/interpreter*
+tex/modeller*
+tex/objmodel*
+tex/ocr*
+tex/pedometer*
+tex/sampler*
+tex/same-origin-policy*
+tex/spreadsheet*
+tex/static-analysis*
+tex/template-engine*
+tex/web-server*
 html/content
 html/cache
 *.pid
